--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 # remote_theme             : "mmistakes/minimal-mistakes@4.24.0"
 theme                    : "minimal-mistakes-jekyll"
 
-minimal_mistakes_skin    : "mint" #"default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "air" #"default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-US"
