--- a/_config.yml
+++ b/_config.yml
@@ -56,6 +56,7 @@ reCaptcha:
 
 atom_feed:
   path                   : # blank (default) uses feed.xml
+  hide                   : true
 
 search                   : #true # true, false (default)
 search_full_content      : #true # true, false (default)
