--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "air" #"default" # "air", "aqua", "contrast", "dark",
 locale                   : "en-US"
 title                    : "Community Canvases"
 title_separator          : "-"
-subtitle                 : "Community Engagement Through Art"
+subtitle                 : "The Art of Community... Through the Arts!"
 name                     : &name "Communtiy Canvases" # &name is a YAML anchor which can be *referenced later
 description              : &description "Facilitating community engagement through art."
 url                      : https://communitycanvases.org # the base hostname & protocol for your site
