--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "en-US"
 title                    : "Community Canvases"
 title_separator          : "-"
 subtitle                 : "The Art of Community... Through the Arts!"
-name                     : &name "Communtiy Canvases" # &name is a YAML anchor which can be *referenced later
+name                     : &name "Community Canvases" # &name is a YAML anchor which can be *referenced later
 description              : &description "Facilitating community engagement through the arts."
 url                      : https://communitycanvases.org # the base hostname & protocol for your site
 baseurl                  : "/" # the subpath of your site, e.g. "/blog"
