--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,5 +4,7 @@ main:
     url: /about/
   - title: "Donate"
     url: /donate/
+  - title: "Programs"
+    url: /
   - title: "Privacy"
     url: /privacy/
