Add Events collection

--- a/_config.yml
+++ b/_config.yml
@@ -198,6 +198,9 @@ collections:
   portfolio:
     output: true
     permalink: /:collection/:path/
+  events:
+    output: true
+    permalink: /:collection/:path/
 
 
 # Defaults
