Update community swing image

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -14,7 +14,7 @@
   link: https://www.facebook.com/communitycanvases
   image: /assets/images/projects/cooking.jpg
 - name: Community Swing
-  image: /assets/images/projects/communityswing1.jpg
+  image: /assets/images/projects/communityswing1.png
   link: https://www.facebook.com/communitycanvases
 - name: Signal Boxes
   link: https://www.buffalorising.com/tags/community-canvases/
