--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -15,7 +15,7 @@
   image: /assets/images/projects/cooking.jpg
 - name: Community Swing
   image: /assets/images/projects/communityswing1.png
-  link: https://www.facebook.com/communitycanvases
+  link: https://www.facebook.com/communityswing
 - name: Signal Boxes
   link: https://www.buffalorising.com/tags/community-canvases/
   image: /assets/images/projects/signalbox1.jpg
