--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,24 +1,24 @@
-- name: Earth Day Contest 2023!
-  link: /earthday2023/
-  image: /assets/images/projects/earthday1.jpg
-- name: Kind Fools
-  link: https://kindfools.org
-  image: https://kindfools.org/assets/images/firstwriteon/group.jpg
 - name: WNY Trash Mob
   image: /assets/images/projects/trashmob1.jpg
   link: https://www.facebook.com/wnytrashmob
-- name: The Barkyard
-  link: https://www.facebook.com/communitycanvases
-  image: /assets/images/projects/barkyard.jpg
-- name: Cooking Classes at Broadway Market 
-  link: https://www.facebook.com/communitycanvases
-  image: /assets/images/projects/cooking.jpg
+- name: Kind Fools
+  link: https://kindfools.org
+  image: https://kindfools.org/assets/images/firstwriteon/group.jpg
+- name: Collaborative Community Art
+  link: /events/communityartsummer2023/
+  image: /assets/images/projects/bench1.jpg
 - name: Community Swing
   image: /assets/images/projects/communityswing1.png
   link: https://www.facebook.com/communityswing
 - name: Signal Boxes
   link: https://www.buffalorising.com/tags/community-canvases/
   image: /assets/images/projects/signalbox1.jpg
-- name: Catholic Health Youth Workshop
+- name: The Barkyard
   link: https://www.facebook.com/communitycanvases
-  image: /assets/images/projects/bench1.jpg
+  image: /assets/images/projects/barkyard.jpg
+- name: Cooking Classes at Broadway Market 
+  link: https://www.facebook.com/communitycanvases
+  image: /assets/images/projects/cooking.jpg
+- name: Earth Day Contest!
+  link: /earthday2023/
+  image: /assets/images/projects/earthday1.jpg
