Update signal boxes link

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -11,7 +11,7 @@
   image: /assets/images/projects/communityswing1.png
   link: https://www.facebook.com/communityswing
 - name: Signal Boxes
-  link: https://www.buffalorising.com/tags/community-canvases/
+  link: /signalboxes/northbuffalo/
   image: /assets/images/projects/signalbox1.jpg
 - name: The Barkyard
   link: https://www.facebook.com/communitycanvases
