Update events and projects

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -16,9 +16,9 @@
 - name: The Barkyard
   link: https://www.facebook.com/communitycanvases
   image: /assets/images/projects/barkyard.jpg
-- name: Cooking Classes at Broadway Market 
-  link: https://www.facebook.com/communitycanvases
-  image: /assets/images/projects/cooking.jpg
+- name: Heavy Reflections 
+  link: https://kindfools.org/heavyreflections/
+  image: /assets/images/projects/heavyreflectionsgroup.jpg
 - name: Earth Day Contest!
-  link: /earthday2023/
+  link: /earthday2024/
   image: /assets/images/projects/earthday1.jpg
