Update board bios

--- a/_data/board.yml
+++ b/_data/board.yml
@@ -49,18 +49,40 @@
 - name: Jalen Law
   role: Member
   bio: |
-    Bio under construction.
+       Jalen has been an artist since the age of four.
+        He’s always been interested in different forms of creation, including painting,
+        drawing, and sculpting. His first mural was a City of Buffalo initiative to honor
+        essential workers during the COVID-19 pandemic — the piece was a 5’X10’ aluminum
+        panel honoring doctors and nurses. Then, the Niagara Falls Heritage Center
+        approached him about creating a portrait for their Niagara Falls Murals initiative,
+        leading him to create his Calvin “Pop” Porter mural.
+
+        Common themes in Jalen’s work
+        include utilizing technology and digital arts, including audio and video stimulation,
+        to allow all types of people to engage with his pieces. Currently, he is  working on
+        a research-based art program called the Emotional Intelligence Program to equip
+        students with social and emotional tools that will assist them inside and outside of the classroom.
 
 - name: Jenna Brinkworth
   role: Member
   bio: |
-    Bio under construction.
+        Jenna Brinkworth, BS, TTS is a Community Outreach and Engagement Manager
+        at Roswell Park Comprehensive Cancer Center. She is a seasoned leader
+        with over 30 years of experience in civic engagement and public health
+        advocacy. She has successfully brought together diverse organizations
+        and individuals to advance chronic disease prevention and tobacco control efforts.
+
+        Jenna’s recent initiatives focus on the environmental impact of tobacco, the
+        rising prevalence of youth e-cigarette use, and addressing tobacco-related
+        disparities. Dedicated to creating a healthier, tobacco-free future, Jenna continues to
+        lead impactful outreach programs, policy initiatives, and education efforts
+        that promote lasting public health improvements.
 
 - name: Julianna Casella
   role: Member
   bio: |
-    Julianna is a PhD candidate at the University at Buffalo in School and Counseling
-    Psychology. She is the president of the Counseling, School and Educational
+    Julianna recently earned her PhD  at the University at Buffalo in School and Counseling
+    Psychology. She was the president of the Counseling, School and Educational
     Psychology Graduate Student Association and a coordinator for the Future Faculty
     Interest Group for the National Association of School Psychologists. 
 
