--- a/_data/board.yml
+++ b/_data/board.yml
@@ -63,7 +63,7 @@
         a research-based art program called the Emotional Intelligence Program to equip
         students with social and emotional tools that will assist them inside and outside of the classroom.
         Jalen's work can be found at
-        <a href='https://thejalenlawcollection.com/'>The+Jalen+Law+Collection</a>.
+        <a href='https://thejalenlawcollection.com/'>The Jalen Law Collection</a>.
 
 - name: Jenna Brinkworth
   role: Member
