Update Community Swing photos

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -8,7 +8,7 @@
   link: /events/communityartsummer2023/
   image: /assets/images/projects/bench1.jpg
 - name: Community Swing
-  image: /assets/images/projects/communityswing1.png
+  image: /assets/images/projects/communityswing2.jpg
   link: https://www.facebook.com/communityswing
 - name: Signal Boxes
   link: /signalboxes/northbuffalo/
